@@ -3,8 +3,10 @@ require 'json'
 module ActiveMerchant # :nodoc:
   module Billing # :nodoc:
     class FatZebraGateway < Gateway
-      self.live_url = 'https://gateway.fatzebra.com.au/v1.0'
-      self.test_url = 'https://gateway.sandbox.fatzebra.com.au/v1.0'
+      version 'v1.0'
+
+      self.live_url = "https://gateway.fatzebra.com.au/#{fetch_version}"
+      self.test_url = "https://gateway.sandbox.fatzebra.com.au/#{fetch_version}"
 
       self.supported_countries = ['AU']
       self.default_currency = 'AUD'
